[gd_scene load_steps=7 format=4 uid="uid://bh0q6orth8ifq"]

[ext_resource type="Script" uid="uid://cxeccwqanqr1f" path="res://scripts/dialogue_box.gd" id="1_nfm5p"]
[ext_resource type="Texture2D" uid="uid://b47o4hk2bj17t" path="res://scripts/minimal_8_base_v2_1-bit.png" id="2_bjuha"]
[ext_resource type="FontFile" uid="uid://q45m5gpswn2s" path="res://sprites/Minecraft.ttf" id="3_rdkif"]
[ext_resource type="AudioStream" uid="uid://34hyubjrs70e" path="res://audio/typing_sound.wav" id="4_bjuha"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_psv8d"]
texture = ExtResource("2_bjuha")
texture_region_size = Vector2i(8, 8)
25:9/0 = 0
24:9/0 = 0
23:9/0 = 0
23:8/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
25:8/0 = 0
24:8/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
31:8/0 = 0
31:9/0 = 0
30:9/0 = 0
29:9/0 = 0
28:9/0 = 0
27:9/0 = 0
26:9/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
26:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
34:8/0 = 0
34:9/0 = 0
33:8/0 = 0
32:8/0 = 0
32:9/0 = 0
33:9/0 = 0
36:9/0 = 0
37:9/0 = 0
37:8/0 = 0
37:7/0 = 0
36:7/0 = 0
35:7/0 = 0
35:8/0 = 0
35:9/0 = 0
36:8/0 = 0
38:6/0 = 0
37:6/0 = 0
36:6/0 = 0
35:6/0 = 0
34:6/0 = 0
33:6/0 = 0
33:5/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
38:5/0 = 0
37:5/0 = 0
36:5/0 = 0
35:5/0 = 0
34:5/0 = 0

[sub_resource type="TileSet" id="TileSet_lkoup"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_psv8d")

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_nfm5p")

[node name="DialoguePanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 56.0
offset_top = 56.0
offset_right = 304.0
offset_bottom = 112.0

[node name="ColorRect" type="ColorRect" parent="DialoguePanel"]
layout_mode = 0
offset_left = 27.0
offset_top = 12.0
offset_right = 180.0
offset_bottom = 53.0
color = Color(0.14117648, 0.09803922, 0.16470589, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="DialoguePanel"]
tile_map_data = PackedByteArray("AAADAAEAAAAXAAcAAAADAAIAAAAXAAgAAAADAAMAAAAXAAgAAAADAAQAAAAXAAgAAAADAAUAAAAXAAgAAAADAAYAAAAXAAkAAAAEAAYAAAAYAAkAAAAFAAYAAAAYAAkAAAAGAAYAAAAYAAkAAAAHAAYAAAAYAAkAAAAIAAYAAAAYAAkAAAAJAAYAAAAYAAkAAAAKAAYAAAAYAAkAAAALAAYAAAAYAAkAAAAMAAYAAAAYAAkAAAANAAYAAAAYAAkAAAAOAAYAAAAYAAkAAAAPAAYAAAAYAAkAAAAQAAYAAAAYAAkAAAARAAYAAAAYAAkAAAASAAYAAAAYAAkAAAATAAYAAAAYAAkAAAAUAAYAAAAYAAkAAAAVAAYAAAAYAAkAAAAWAAYAAAAZAAkAAAAWAAUAAAAZAAgAAAAWAAQAAAAZAAgAAAAWAAMAAAAZAAgAAAAWAAIAAAAZAAgAAAAWAAEAAAAZAAcAAAAVAAEAAAAYAAcAAAAUAAEAAAAYAAcAAAATAAEAAAAYAAcAAAASAAEAAAAYAAcAAAARAAEAAAAYAAcAAAAQAAEAAAAYAAcAAAAPAAEAAAAYAAcAAAAOAAEAAAAYAAcAAAANAAEAAAAYAAcAAAAMAAEAAAAYAAcAAAALAAEAAAAYAAcAAAAKAAEAAAAYAAcAAAAJAAEAAAAYAAcAAAAIAAEAAAAYAAcAAAAHAAEAAAAYAAcAAAAGAAEAAAAYAAcAAAAFAAEAAAAYAAcAAAAEAAEAAAAYAAcAAAA=")
tile_set = SubResource("TileSet_lkoup")

[node name="DialogueText" type="Label" parent="DialoguePanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 17.0
offset_right = 320.0
offset_bottom = 69.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("3_rdkif")
autowrap_mode = 3

[node name="ContinuePrompt" type="Label" parent="DialoguePanel"]
visible = false
layout_mode = 0
offset_left = 79.0
offset_top = 47.0
offset_right = 272.0
offset_bottom = 63.0
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("3_rdkif")
text = "press SPACE to continue"

[node name="TypeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bjuha")
volume_db = -10.0
